<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:title="@string/travel_agency_management">
            <menu>
                <item
                    android:id="@+id/temp1"
                    android:icon="@mipmap/ic_menu_video"
                    android:title="@string/team_management"
                    app:actionLayout="@layout/item_navigation"/>
                <item
                    android:id="@+id/temp2"
                    android:icon="@mipmap/ic_menu_video"
                    android:title="@string/settlement_management"
                    app:actionLayout="@layout/item_navigation"/>
            </menu>
        </item>
    </group>
    <group>
        <item
            android:title="@string/guide_management">
            <menu>
                <item
                    android:id="@+id/temp3"
                    android:icon="@mipmap/ic_menu_video"
                    android:title="@string/team_management"
                    app:actionLayout="@layout/item_navigation"/>
                <item
                    android:id="@+id/temp4"
                    android:icon="@mipmap/ic_menu_video"
                    android:title="@string/team_management"
                    app:actionLayout="@layout/item_navigation"/>
            </menu>
        </item>
    </group>
</menu>
