<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/divider_color"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

    <include
        android:id="@id/toolbar"
        layout="@layout/layout_title_bar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/settlement_select"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/solidwhite_strokegray"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="33dp"
                    android:gravity="center"
                    android:text="@string/settlemnet_select_condition"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="82dp"
                    android:gravity="center"
                    android:text="@string/settlemnet_select_value"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="82dp"
                    android:gravity="center"
                    android:text="@string/settlemnet_select_do"/>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorAccent"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <LinearLayout
                android:id="@+id/settlement_lin_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_height"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/view_height">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:src="@mipmap/icon_add_pic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settlement_select_condition"
                    android:textColor="@color/blue"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/settlement_select"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settlementReset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_dark"
            android:gravity="center"
            android:text="@string/settlement_select_reset"
            android:textColor="@color/white"
            android:textSize="@dimen/main_title_size"/>

        <TextView
            android:id="@+id/settlementSubmit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/settlement_select_query"
            android:textColor="@color/white"
            android:textSize="@dimen/main_title_size"/>
    </LinearLayout>
</RelativeLayout>